--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,11 @@ allprojects {
         
     }
 }
+allprojects {
+    tasks.withType(JavaCompile) {
+        options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
+    }
+}
 
 task clean(type: Delete) {
     delete rootProject.buildDir
